# Battle-of-Hackers-2022-2023

./: README.md
pwn-01 format2win/: README.md  format2win.c  solve.py
pwn-01 format2win/Docker/: build.sh  ctf.xinetd  flag.txt  format2win  start.sh
pwn-02 Rusty Stack/: Cargo.toml  README.md  fuzz.py  main.rs  solve_local.py  solve_remote.py
pwn-02 Rusty Stack/Docker/: build.sh  flag.txt  start.sh
pwn-03 Reduce, Reuse, Recycle/: 3r  3r.c  README.md  hash  hash.c  solve.py
pwn-03 Reduce, Reuse, Recycle/Docker/: build.sh  ctf.xinetd  flag.txt  start.sh
rev-01 baby flag-checker/: README.md  encrypt.py  flagchecker  flagchecker.c  solve.py
rev-02 Rusty Seed/: Cargo.toml  README.md  main.rs  solve.py
rev-02 Rusty Seed/Docker/: Dockerfile  build.sh  ctf.xinetd  flag1.txt  flag2.txt  start.sh
rev-03 Grape/: Grape.sln
rev-03 Grape/Grape/: Grape.cpp  Grape.vcxproj  Grape.vcxproj.filters  obfuscate.h
rev-03 Grape/Grape/x64/Debug/: Grape.exe.recipe  vc143.idb
rev-03 Grape/Grape/x64/Release/: Grape.exe.recipe  Grape.iobj  Grape.ipdb
rev-04 MetalPipe/: MetalPipe.sln
rev-04 MetalPipe/MetalPipe/: MetalPipe.cpp  MetalPipe.rc  MetalPipe.vcxproj  MetalPipe.vcxproj.filters  anti_debug.cpp  anti_debug.hpp  resource.h
rev-04 MetalPipe/MetalPipe/Debug/: MetalPipe.exe.recipe  MetalPipe.ilk  vc143.idb
rev-04 MetalPipe/MetalPipe/Debug/MetalPipe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MetalPipe.lastbuildstate  link.read.1.tlog  (+5 more)
rev-04 MetalPipe/MetalPipe/Release/: MetalPipe.exe.recipe  MetalPipe.iobj  MetalPipe.ipdb  MetalPipe.res
(+26 files in other folders)
