[package]
name = "rustyseed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
libc-stdhandle = "0.1.0"
libsodium-sys = "0.2.7"
lazy_static = "1.4.0"
round = "0.1.2"
num-traits = "0.2.15"